changed polybar width to match with opened windows

--- a/Bspwm Dot-files/config/polybar/config.ini
+++ b/Bspwm Dot-files/config/polybar/config.ini
@@ -16,6 +16,8 @@ cyan = #95e6cb
 alpha = #00000000
 white = #fff
 
+; Change for your own monitor here
+
 [bar/top]
 ;monitor = DP-4
 
@@ -27,7 +29,7 @@ bottom = false
 ; Prefer fixed center position for the `modules-center` block
 fixed-center = true
 
-width = 98%
+width = 98.5%
 height = 32
 
 offset-x = 0.8%
