implementation of a terminal scratch pad
using a bash script, very useful

--- a/Bspwm Dot-files/config/picom/picom.conf
+++ b/Bspwm Dot-files/config/picom/picom.conf
@@ -138,6 +138,12 @@ opacity-rule = [
 	#terminal
 	"70:class_g = 'Xfce4-terminal' && focused",
 	"50:class_g = 'Xfce4-terminal' && !focused",
+	#terminal kitty
+	"65:class_g = 'kitty' && focused",
+	"50:class_g = 'kitty' && !focused",
+	#terminal scratchpad
+	"50:class_g = 'scratchpad' && focused",
+	"50:class_g = 'scratchpad' && !focused",
 	#firefox
 	"95:class_g = 'firefox' && focused",
 	"95:class_g = 'firefox' && !focused",
