--- a/Bspwm Dot-files/config/polybar/config.ini
+++ b/Bspwm Dot-files/config/polybar/config.ini
@@ -473,5 +473,5 @@ margin-right = 0
 type = custom/script
 interval = 300s
 exec = ~/.config/polybar/scripts/checkupdates.sh
-click-left = xfce4-terminal -e "sudo pacman -Syu"
+click-left = kitty sudo pacman -Syu
 format-foreground = ${colors.orange}
