--- a/Bspwm Dot-files/config/picom/picom.conf
+++ b/Bspwm Dot-files/config/picom/picom.conf
@@ -182,11 +182,11 @@ rounded-corners-exclude = [
 
 # Parameters for background blurring, see the *BLUR* section for more information.
  blur-method = "dual_kawase"
-# blur-size = 12
+ blur-size = 12
 #
-# blur-deviation = false
+ #blur-deviation = true
 #
-blur-strength = 5
+blur-strength = 6
 
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
